# geo-nd-rs

./: Cargo.toml  README.md  RELEASES.md
src/: farray.rs  farray2.rs  fqarray.rs  fslice.rs  fslice2.rs  lib.rs  matrix_op.rs  matrixr_op.rs  mod.rs  qarray.rs  quaternion_op.rs  traits.rs  vector_op.rs
src/simd/: simd_vec.rs
tests/: quaternion.rs  vector.rs
