[package]
name = "geo-nd"
version = "0.1.7"
edition = "2021"
readme = "README.md"
authors = ["Gavin J Stark"]
# exclude = ["/bors.toml", "/ci/*", "/.github/*"]
description = "Traits and types particularly for 2D and 3D geometry with implementations for [float] and optionally SIMD\n"
homepage = "https://github.com/atthecodeface/geo-nd-rs"
documentation = "https://docs.rs/geo-nd"
keywords = ["geometry", "gamedev", "vector", "quaternion", "simd"]
categories = ["graphics", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/geo-nd-rs"

[dependencies.num-traits]
version = "0.2.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# [dependencies.core_simd]
# git = "https://github.com/rust-lang/stdsimd"
# optional = true

# [features]
# simd = ["core_simd"]
